[package]
name = "protontweaks-api"
description = "api for interacting with https://api.protontweaks.com"
homepage = "https://protontweaks.com"
repository = "https://github.com/ribbon-studios/protontweaks-api-rs"
documentation = "https://docs.rs/protontweaks-api/"
license-file = "LICENSE"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
wgpu = "0.19.3"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
